# epistemic-rl-release

./: .gitignore  LICENSE  README.md  requirements.txt
dmcgym/: requirements.txt
dmcgym/dmcgym/: env.py
jaxrl5/: requirements.txt  requirements_train.txt  setup.py
jaxrl5/jaxrl5/agents/: __init__.py
jaxrl5/jaxrl5/data/: dataset.py  memory_efficient_replay_buffer.py  replay_buffer.py
jaxrl5/jaxrl5/distributions/: __init__.py  tanh_normal.py  tanh_transformed.py
jaxrl5/jaxrl5/networks/: ensemble.py  mlp.py
offroad-procedural-sim/: README.md  setup.py
offroad-procedural-sim/procedural_driving/: __init__.py  car.py  chunk.py  env_helpers.py  goal_graph.py  procedural_arena.py  task.py  wrappers.py
offroad-robot-ros/: README.md
offroad-robot-ros/offroad_bringup/: CMakeLists.txt  package.xml
offroad-robot-ros/offroad_bringup/config/: joy_teleop.yaml  low_level_mux.yaml  vesc.yaml  zed_f9p.yaml
offroad-robot-ros/offroad_bringup/launch/: mux.launch  real_inference.launch  system.launch
offroad-robot-ros/offroad_bringup/launch/includes/: joy_teleop.launch.xml  sensors_indoor.launch.xml  sensors_outdoor.launch.xml  static_transforms_indoor.launch.xml  static_transforms_outdoor.launch.xml  vesc.launch.xml
offroad-robot-ros/offroad_learning/: CMakeLists.txt  package.xml  setup.py
offroad-robot-ros/offroad_sensor_fusion/: CMakeLists.txt  setup.py
offroad-robot-ros/setup/: .bashrc  requirements.txt  ros_entrypoint.sh
offroad-robot-ros/tensor_dict_convert/: setup.py
scripts/sim/: manual.py  run_policy.py  train_online_states.py
(+79 files in other folders)
